# deep-project

./: CHANGELOG.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
scripts/hooks/: capture-session-id.py
scripts/llm_clients/: pro_review.py
skills/deep-project/: SKILL.md
tests/: test_capture_session_id.py
