[project]
name = "deep-project"
version = "0.2.1"
description = "Claude Code plugin for splitting vague requirements into plannable units"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "tests*"]
